@@ -1,0 +1,40 @@
+/**
+ * Mogwai ERDesigner. Copyright (C) 2002 The Mogwai Project.
+ * 
+ * This program is free software; you can redistribute it and/or modify it under
+ * the terms of the GNU General Public License as published by the Free Software
+ * Foundation; either version 2 of the License, or (at your option) any later
+ * version.
+ * 
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+ * details.
+ * 
+ * You should have received a copy of the GNU General Public License along with
+ * this program; if not, write to the Free Software Foundation, Inc., 59 Temple
+ * Place - Suite 330, Boston, MA 02111-1307, USA.
+ */
+package de.erdesignerng.dialect.h2;
+
+import de.erdesignerng.dialect.GenericDataTypeImpl;
+
+/**
+ * @author $Author: gniddelgesicht $
+ * @version $Date: 2008/11/15 17:04:23 $
+ */
+public class H2DataType extends GenericDataTypeImpl {
+
+    public H2DataType(String aName, String aDefinition, int... aJdbcDataType) {
+        super(aName, aDefinition, aJdbcDataType);
+    }
+
+    public H2DataType(String aName, String aDefinition, boolean anIdentity, int... aJdbcDataType) {
+        super(aName, aDefinition, aJdbcDataType);
+
+        identity = anIdentity;
+        if (anIdentity) {
+            maxOccoursPerTable = 1;
+        }
+    }
+}
