@@ -1,0 +1,1 @@
+ALTER TABLE TESTTABLE ALTER COLUMN AT1 integer NOT NULL;
