@@ -1,0 +1,1 @@
+ALTER TABLE TESTTABLE ALTER COLUMN AT1 RENAME TO AT1_NEW;
